<resources>
    <string name="XX_app_name">GdprCmpLib</string>
    <string name="gdpr_cmp_activity_label">Consent Management</string>
    <string name="gdpr_cmp_consent_description">As of May 25th, 2018, GDPR,
        also known as the General Data Protection Regulation, takes effect.
        This law is for the general protection of data and privacy for all
        individuals within the EU.  By \'Consenting\' you are allowing this
        application to utilize your personal data, if applicable, for purposes
        such as, but not exclusive to personalized advertisements.  By
        \'Not Consenting\' you are not allowing vendors to utilize your personal data
        for these purposes.
    </string>
    <string name="i_consent">I Consent</string>
    <string name="i_do_not_consent">I Do Not Consent</string>
    <string name="details">More Details...</string>
    <string name="details_description">You can give consent on a line-by-line basis by
        checking/unchecking the boxes.  The following is a list of data usage purposes
        followed by a list of the official advertising partners.
    </string>
    <string name="go_back">Go Back</string>
    <string name="save">SAVE</string>
    <string name="check_all">Check All</string>
    <string name="uncheck_all">Uncheck All</string>

    <string name="XX_sample_multi">• Text and stuff \n• And more</string>

    <string name="buy">Trial Version. Tap to purchase</string>
    <string name="buy_msg">Saved GDPR consent string! And thank you for trying the product!
        This GDPR stuff was not easy.  Please support us buy buying our sdk with
        a one-time fee @ http://gdpr-sdk.com  Once you purchase we will send you a key.
        In the meantime, feel free to continue evaluating!</string>
</resources>
